# Cursiv-v3

./: .gitignore  CHANGELOG.md  CNAME  COPYRIGHT.md  Dockerfile  Import PiForge.bat  LICENSE  LLM_ARCHITECTURE_REFERENCE.md  Launch Chat CLI.bat  Launch Chat.bat  Launch Cursiv.bat  Launch Evo Runtime.bat  Launch Nexus.bat  Launch RADS.bat  README.md  RELEASE_v3.md  START CURSIV SYSTEM.bat  Setup and Launch Cursiv.bat  TECH.md  UPDATES.md  board.html  chat.html  cursiv.bat  evolve.py  grok_instruction_sets.md  index.html  install_local.py  piforge_importer.py  profile.html  pyproject.toml  railway.toml  requirements-web.txt  requirements.txt  serve_local.py  streak.py  streak_bridge.py  system_vision.html
.cursiv/: agent_registry.json
.streamlit/: config.toml
Cursiv/.obsidian/: workspace.json
cursiv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cursiv_v215/: __init__.py
cursiv_v215/academy/: __init__.py  engine.py  scorer.py
cursiv_v215/agents/: __init__.py  babel_agent.py  codex_agent.py  hermes_agent.py  offline_queue.py  reference_brain.py  voice_agent.py
cursiv_v215/cli/: __init__.py  evo_cli.py
examples/: README.md
installer/: cursiv_setup.iss
launcher/: README.md  build.spec  csb_standalone.py  cursiv_browser.py  cursiv_launcher.py  hide_console.pyw  launch_cursiv.bat  login_dialog.py  main.py  requirements.txt  tray.py
rads/: __init__.py  main.py  territory.json
scripts/: build.bat  install_cursiv_cmd.bat  install_ollama.ps1  package.bat  verify_build.bat
services/: __init__.py  guardian_service.py
(+130 files in other folders)
